manifests/base/egress-multitenant-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: egress-multitenant-demo
  labels:
    app: egress-multitenant-demo
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: egress-multitenant-demo
      tier: frontend
  template:
    metadata:
      labels:
        app: egress-multitenant-demo
        tier: frontend
    spec:
      serviceAccountName: egress-multitenant-demo
      containers:
        - name: app
          image: rg.fr-par.scw.cloud/egress-multitenant-demo/egress-multitenant-demo:latest
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      tolerations:
        - key: node-role.kubernetes.io/client-a
          operator: Equal
          value: "dedicated"
          effect: NoSchedule
      nodeSelector:
        node-pool: client-type-a-pool
