manifests/base/egress-multitenant-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: egress-multitenant-demo
  labels:
    app: egress-multitenant-demo
    tier: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    name: http
  selector:
    app: egress-multitenant-demo
    tier: frontend
